# pjecz-rrhh-personal-api-key

./: .gcloudignore  .gitignore  Dockerfile  README.md  app.yaml  pyproject.toml  requirements.txt
.github/workflows/: black.yml  gcloud-app-deploy.yml
cli/: app.py
cli/db/: app.py
config/: settings.py
lib/: database.py  exceptions.py  fastapi_pagination_custom_list.py  fastapi_pagination_custom_page.py  hashids.py  safe_string.py  schemas_base.py  universal_mixin.py
rest-client/: personas.rest  usuarios.rest
rrhh_personal/: app.py
rrhh_personal/core/acciones/: models.py
rrhh_personal/core/areas/: models.py
rrhh_personal/core/bitacoras/: models.py
rrhh_personal/core/centros_trabajos/: models.py
rrhh_personal/core/entradas_salidas/: models.py
rrhh_personal/core/modulos/: models.py
rrhh_personal/core/permisos/: models.py
rrhh_personal/core/personas/: models.py
rrhh_personal/core/roles/: models.py
rrhh_personal/core/usuarios/: models.py
rrhh_personal/core/usuarios_acciones/: models.py
rrhh_personal/core/usuarios_roles/: models.py
rrhh_personal/v3/acciones/: crud.py  paths.py  schemas.py
rrhh_personal/v3/bitacoras/: crud.py  paths.py  schemas.py
rrhh_personal/v3/modulos/: crud.py  paths.py  schemas.py
rrhh_personal/v3/permisos/: crud.py  paths.py  schemas.py
rrhh_personal/v3/roles/: crud.py  paths.py  schemas.py
rrhh_personal/v3/usuarios/: authentications.py  crud.py  paths.py  schemas.py
rrhh_personal/v3/usuarios_acciones/: crud.py  paths.py  schemas.py
rrhh_personal/v3/usuarios_roles/: crud.py  paths.py  schemas.py
rrhh_personal/v4/areas/: crud.py  paths.py  schemas.py
rrhh_personal/v4/bitacoras/: crud.py  paths.py  schemas.py
rrhh_personal/v4/centros_trabajos/: crud.py  paths.py  schemas.py
rrhh_personal/v4/entradas_salidas/: crud.py  paths.py  schemas.py
rrhh_personal/v4/modulos/: crud.py  paths.py  schemas.py
rrhh_personal/v4/permisos/: crud.py  paths.py  schemas.py
rrhh_personal/v4/personas/: crud.py  paths.py  schemas.py
rrhh_personal/v4/roles/: crud.py  paths.py  schemas.py
rrhh_personal/v4/usuarios/: authentications.py  crud.py  paths.py  (+1 more)
tests/: README.md  load_env.py  test_areas.py  test_catalogos.py  test_personal.py  test_usuarios.py
(+3 files in other folders)
