[tool.poetry]
name = "pjecz_rrhh_personal_api_key"
version = "0.1.0"
description = "API con autentificación para realizar operaciones con la base de datos de RRHH Personal."
authors = ["Guillermo Valdes <guillermo.valdes@pjecz.gob.mx>"]
license = "AGPL3"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.11.4"}
google-auth = "^2.16.2"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.16.0"
gunicorn = "^20.1.0"
hashids = "^1.3.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.0"
pydantic = "^1.10.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytz = "^2022.7.1"
SQLAlchemy = "^2.0.7"
SQLAlchemy-Utils = "^0.40.0"
Unidecode = "^1.3.6"
uvicorn = "^0.21.1"

[tool.poetry.dev-dependencies]
pylint = "^2.17.0"
pylint-sqlalchemy = "^0.2.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
